added no-args constructor to Purchase